[gd_scene load_steps=22 format=2]

[ext_resource path="res://scripts/RaceSplitScreen.gd" type="Script" id=1]
[ext_resource path="res://scenes/UI/EndScoreOverlay.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/RacingSansOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/ScreenFadeInOut.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sounds/buzz1.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/bells.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/win2.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/musics/DST-RailJet-LongSeamlessLoop.mp3" type="AudioStream" id=8]
[ext_resource path="res://scenes/AutoGrass.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/UI/PauseOverlay.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/sounds/buzz2.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sounds/photo.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sounds/build3.wav" type="AudioStream" id=13]

[sub_resource type="DynamicFont" id=1]
size = 128
outline_size = 15
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MusicPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -9.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/PauseOverlay:allow_pause")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/PauseOverlay:allow_pause")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("MusicPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -9.0, -22.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/PauseOverlay:allow_pause")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/RoundLabel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StartAudio:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BuzzShortAudio:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BuzzLongAudio:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/RoundLabel:anchor_top")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("VictoryAudio:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "countdown"
length = 4.9
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/RoundLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 2.5, 3.3, 4.1, 4.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 2,
"values": [ "Ready?", "3", "2", "1", "Go!" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/RoundLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 2,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StartAudio:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 2,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BuzzShortAudio:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.5, 3.3, 4.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 2,
"values": [ false, true, true, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BuzzLongAudio:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 4.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 2,
"values": [ false, true ]
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("CanvasLayer/RoundLabel:anchor_top")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.2, 0, 0.4, 0, 0.985104, -0.2, -0.18199, 0.25, 0 ),
"times": PoolRealArray( 0.5, 1.2, 2 )
}

[sub_resource type="Animation" id=8]
resource_name = "end_race"
length = 5.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/RoundLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Finished!" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/RoundLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CanvasLayer/RoundLabel:anchor_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.1, -0.275202, -0.000248194, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("VictoryAudio:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "post_countdown"
length = 1.5

[node name="Race" type="Node"]
script = ExtResource( 1 )

[node name="World" type="Node2D" parent="."]

[node name="AutoGrass" parent="World" instance=ExtResource( 9 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RoundLabel" type="Label" parent="CanvasLayer"]
anchor_top = 0.985104
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -30.0
grow_vertical = 0
custom_colors/font_color = Color( 1, 0.427451, 0.192157, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.505882, 0.211765, 0.0901961, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = -4
custom_fonts/font = SubResource( 1 )
text = "Go!"
align = 1
valign = 1

[node name="EndScoreOverlay" parent="CanvasLayer" instance=ExtResource( 2 )]
pause_mode = 2
visible = false

[node name="PauseOverlay" parent="CanvasLayer" instance=ExtResource( 10 )]
visible = false

[node name="ScreenFadeInOut" parent="." instance=ExtResource( 4 )]

[node name="AnimationPlayer2" type="AnimationPlayer" parent="ScreenFadeInOut"]
root_node = NodePath("../..")
anims/RESET = SubResource( 3 )
anims/fade_in = SubResource( 2 )
anims/fade_out = SubResource( 4 )

[node name="CountdownPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/countdown = SubResource( 5 )
anims/end_race = SubResource( 8 )
anims/post_countdown = SubResource( 7 )

[node name="BuzzShortAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Fx"

[node name="BuzzLongAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "Fx"

[node name="StartAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Fx"

[node name="VictoryAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -6.0
bus = "Fx"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 8 )
volume_db = -9.0
autoplay = true
bus = "Music"

[node name="CheckpointPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="LapPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
